--- a/app/src/main/res/layout/add_apiary1.xml
+++ b/app/src/main/res/layout/add_apiary1.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <RelativeLayout
+
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -102,7 +103,8 @@
                 android:layout_alignRight="@+id/yearRow"
                 android:layout_alignEnd="@+id/yearRow"
                 android:spinnerMode="dropdown"
-                android:contextClickable="false" />
+                android:contextClickable="false"
+                android:entryValues="@array/years"/>
 
 
         </TableRow>
@@ -286,12 +288,14 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/back"
+            android:layout_weight="0.5"
             android:id="@+id/back_button" />
 
         <Button
             style="?android:attr/buttonStyleSmall"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_weight="0.5"
             android:text="@string/next"
             android:id="@+id/next_button" />
     </TableRow>
